--- a/omnichannel-frontend/src/App.css
+++ b/omnichannel-frontend/src/App.css
@@ -1,5 +1,18 @@
 .App {
   text-align: center;
+
+}
+
+.main {
+  max-width: auto;
+  max-height: auto;
+  height: 100vh;
+  position: relative;
+  width: 100vw; 
+}
+
+.title {
+  text-align: center;
 }
 
 .App-logo {
@@ -16,6 +29,8 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  height: 100vh;
+  width: 100vw; 
   display: flex;
   flex-direction: column;
   align-items: center;
