feat: add style to omnichannel page

--- a/omnichannel-frontend/src/index.css
+++ b/omnichannel-frontend/src/index.css
@@ -1,4 +1,7 @@
 body {
+  background: linear-gradient(to bottom, #ccc, #007bff);
+  margin: 0;
+  padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
