--- a/omnichannel-frontend/src/components/Users.css
+++ b/omnichannel-frontend/src/components/Users.css
@@ -1,5 +1,142 @@
 .div-subtitle {
-    background: red;
+    justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
+    display: flex;
 }
+
+.link-add{
+    margin-left: 10px;
+    margin-top: 2px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #ffffff;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .link-add:hover {
+    background-color: #0056b3;
+  }
+
+  .edit-link{
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .edit-link:hover {
+    background-color: #0056b3;
+  }
+  
+  
+.table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .table th,
+  .table td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ccc;
+  }
+  
+  .table th {
+    background-color: #f2f2f2;
+  }
+
+  .form {
+    width: 300px;
+    margin: 0 auto;
+  }
+  
+  .form input{
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 5px;
+  }
+  
+  .buttons-create-edit  {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 20px;
+  }
+  
+  .buttons-create-edit  .cancel-link {
+    display: inline-block;
+    margin-right: 20px;
+    padding: 10px 20px;
+    background-color: #f2f2f2;
+    border-radius: 4px;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  .buttons-create-edit  .cancel-link:hover {
+    background-color: red;
+    color: #f2f2f2;
+  }
+  
+  .buttons-create-edit  .submit-button {
+    display: inline-block;
+    margin-right: 10px;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #ffffff;
+    border-radius: 4px;
+    border-color: transparent;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .buttons-create-edit  .submit-button:hover {
+    background-color: #0056b3;
+  }
+
+  .form input {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  
+  input[type="date"] {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+  }
+  
+  input[type="date"]::-webkit-calendar-picker-indicator {
+    padding: 4px;
+    border-radius: 4px;
+    cursor: pointer;
+    opacity: 0.8;
+  }
+  
+  input[type="date"]::-webkit-datetime-edit-text {
+    color: #333;
+  }
+  
+  input[type="date"]::-webkit-inner-spin-button,
+  input[type="date"]::-webkit-outer-spin-button {
+    appearance: none;
+    margin: 0;
+  }
+  
+  input[type="date"]::-moz-calendar-picker-indicator {
+    display: none;
+  }
+  
   
